@@ -1,13 +1,8 @@
 To Do:
 ======
 
-ASAP:
-=====
-
-- shifting left/right option for MA's
 - create some howto docs for quote plugins
 - add MA option to all plugins?
-
 
 Maybe some day:
 ===============
