@@ -2,40 +2,31 @@
 <html>
 <head>
   <title>Moving Average - MA</title>
-                                                                        
-   
   <meta http-equiv="content-type"
  content="text/html; charset=ISO-8859-1">
 </head>
-  <body>
-                     
+<body>
 <h2><u>Moving Average - MA</u></h2>
-       <img src="ma1.png" alt="" width="760" height="578">
-                     
+<img src="ma1.png" alt="" width="760" height="578">
 <h3>Parameters:</h3>
-                        
 <ul>
-                 <li>Input - The data field the MA is based on</li>
-   <li>Color - MA color</li>
-             <li>Line Type - MA line type</li>
-         <li>Label - The text to identify the MA plot</li>
-         <li>Period - The period used for the MA</li>
-   <li>MA Type - The type of MA to use<br>
-   </li>
-                               
+  <li>Input - The data field the MA is based on</li>
+  <li>Color - MA color</li>
+  <li>Line Type - MA line type</li>
+  <li>Label - The text to identify the MA plot</li>
+  <li>Period - The period used for the MA</li>
+  <li>Displace - The number of bars to displace the MA plot to the right<br>
+  </li>
+  <li>MA Type - The type of MA to use<br>
+  </li>
 </ul>
-                     
 <h3>Description:</h3>
-           <br>
-                     
+<br>
 <h3>Alerts:&nbsp;</h3>
-                     
 <ul>
-            
 </ul>
-             True<br>
-   <br>
-              <br>
-         
+True<br>
+<br>
+<br>
 </body>
 </html>
