@@ -2,45 +2,38 @@
 <html>
 <head>
   <title>2 Plot Moving Average - MA2</title>
-                                                                        
-          
   <meta http-equiv="content-type"
  content="text/html; charset=ISO-8859-1">
 </head>
-  <body>
-                       
+<body>
 <h2><u>2 Plot Moving Average - MA2</u></h2>
-        <img src="ma2.png" alt="" width="760" height="578">
-                       
+<img src="ma2.png" alt="" width="760" height="578">
 <h3>Parameters:</h3>
-                          
 <ul>
-                  <li>Fast Input - The data field the fast MA is based on</li>
-    <li>Fast Color - Fast MA color</li>
-              <li>Fast Line Type - Fast MA line type</li>
-          <li>Fast Label - The text to identify the fast MA plot</li>
-          <li>Fast Period - The period used for the fast MA</li>
-    <li>Fast Type - The type of MA to use</li>
-   <li>Slow Input - The data field the slow MA is based on</li>
-   <li>Slow Color - Slow MA color</li>
-   <li>Slow Line Type - Slow MA line type</li>
-   <li>Slow Label - The text to identify the slow MA plot</li>
-   <li>Slow Period - The period used for the slow MA</li>
-   <li>Slow Type - The type of MA to use</li>
- 
+  <li>Fast Input - The data field the fast MA is based on</li>
+  <li>Fast Color - Fast MA color</li>
+  <li>Fast Line Type - Fast MA line type</li>
+  <li>Fast Label - The text to identify the fast MA plot</li>
+  <li>Fast Period - The period used for the fast MA</li>
+  <li>Fast Displace - The number of bars to displace the fast MA plot
+to the right</li>
+  <li>Fast Type - The type of MA to use</li>
+  <li>Slow Input - The data field the slow MA is based on</li>
+  <li>Slow Color - Slow MA color</li>
+  <li>Slow Line Type - Slow MA line type</li>
+  <li>Slow Label - The text to identify the slow MA plot</li>
+  <li>Slow Period - The period used for the slow MA</li>
+  <li>Slow Displace - The number of bars to displace the slow MA plot
+to the right</li>
+  <li>Slow Type - The type of MA to use</li>
 </ul>
-                       
 <h3>Description:</h3>
-            <br>
-                       
+<br>
 <h3>Alerts:&nbsp;</h3>
-                       
 <ul>
-              
 </ul>
-              True<br>
-    <br>
-               <br>
-           
+True<br>
+<br>
+<br>
 </body>
 </html>
