@@ -5,62 +5,61 @@
   <meta http-equiv="content-type"
  content="text/html; charset=ISO-8859-1">
 </head>
-  <body>
-
+<body>
 <h2><u>Multiple Moving Averages - MMA</u></h2>
 <p>
-<img src="mma.png" alt="" width="754" height="679">
-</p>
-
+<img src="mma.png" alt="" width="754" height="679"></p>
 <h3>Description:</h3>
 <p>
-A group of six short-term (fast) moving averages and a group of six medium-term
-(slow) moving averages. The relationships between the two groups and the
+A group of six short-term (fast) moving averages and a group of six
+medium-term
+(slow) moving averages. The relationships between the two groups and
+the
 patterns inside each group will provide certain indicators.
 An additional MA shows a long-term trend.
 </p>
-                                                   
 <h3>Parameters:</h3>
-                                                      
 <ul>
-<li>Fast Color - Color of the short-term set of MAs</li>
-<li>Fast Input - The data field that the set of fast MAs are based on</li>
-<li>Fast Line Type - The line type for this set of MAs</li>
-<li>Fast Label 1 - The text to identify the first fast MA</li>
-<li>Fast Label 2 - The text to identify the second fast MA</li>
-<li>... other labels for the 6 short-term MAs</li>
-<li>Fast Period 1 - The period used for the first fast MA</li>
-<li>Fast Period 2 - The period used for the second fast MA</li>
-<li>... other fast periods for the 6 short-term MAs</li>
-<li>Fast Type - The type of MA to use</li>
-
-<li>Long-term Color - Color of the long-term MA</li>
-<li>Long-term Input - The data field that the long-term MA is based on</li>
-<li>Long-term Line Type - The line type for this MA</li>
-<li>Long-term Label - The text to identify the long-term MA</li>
-<li>Long-term Period - The period used for the long-term MA</li>
-<li>Long-term Type - The type of MA to use</li>
-
-<li>Slow Color - Color of the medium-term set of MAs</li>
-<li>Slow Input - The data field that the set of slow MAs are based on</li>
-<li>Slow Line Type - The line type for this set of MAs</li>
-<li>Slow Label 1 - The text to identify the first slow MA</li>
-<li>Slow Label 2 - The text to identify the second slow MA</li>
-<li>... other labels for the 6 medium-term MAs</li>
-<li>Slow Period 1 - The period used for the first slow MA</li>
-<li>Slow Period 2 - The period used for the second slow MA</li>
-<li>... other slow periods for the 6 medium-term MAs</li>
-<li>Slow Type - The type of MA to use</li>
+  <li>Fast Color - Color of the short-term set of MAs</li>
+  <li>Fast Input - The data field that the set of fast MAs are based on</li>
+  <li>Fast Line Type - The line type for this set of MAs</li>
+  <li>Fast Label 1 - The text to identify the first fast MA</li>
+  <li>Fast Label 2 - The text to identify the second fast MA</li>
+  <li>... other labels for the 6 short-term MAs</li>
+  <li>Fast Period 1 - The period used for the first fast MA</li>
+  <li>Fast Period 2 - The period used for the second fast MA</li>
+  <li>... other fast periods for the 6 short-term MAs</li>
+  <li>Fast Displace 1 - The number of bars to displace the fast 1 MA
+plot to the right</li>
+  <li>... other fast displace for the 6 short-term MAs</li>
+  <li>Fast Type - The type of MA to use</li>
+  <li>Long-term Color - Color of the long-term MA</li>
+  <li>Long-term Input - The data field that the long-term MA is based on</li>
+  <li>Long-term Line Type - The line type for this MA</li>
+  <li>Long-term Label - The text to identify the long-term MA</li>
+  <li>Long-term Period - The period used for the long-term MA</li>
+  <li>Long-term Displace - The number of bars to displace the long term
+MA plot to the right</li>
+  <li>Long-term Type - The type of MA to use</li>
+  <li>Slow Color - Color of the medium-term set of MAs</li>
+  <li>Slow Input - The data field that the set of slow MAs are based on</li>
+  <li>Slow Line Type - The line type for this set of MAs</li>
+  <li>Slow Label 1 - The text to identify the first slow MA</li>
+  <li>Slow Label 2 - The text to identify the second slow MA</li>
+  <li>... other labels for the 6 medium-term MAs</li>
+  <li>Slow Period 1 - The period used for the first slow MA</li>
+  <li>Slow Period 2 - The period used for the second slow MA</li>
+  <li>... other slow periods for the 6 medium-term MAs</li>
+  <li>Slow Displace 1 - The number of bars to displace the slow 1 MA
+plot to the right</li>
+  <li>... other slow displace for the 6 medium-term MAs</li>
+  <li>Slow Type - The type of MA to use</li>
 </ul>
-
 <h3>Some hints for interpretation</h3>
 <p>[Not yet done]</p>
-
 <h3>Alerts:</h3>
 <ul>
 </ul>
-
 <p>None</p>
-
 </body>
 </html>
