@@ -31,12 +31,14 @@ MA2::MA2 ()
   set(tr("Fast Line Type"), tr("Line"), Setting::LineType);
   set(tr("Fast Label"), tr("MA2F"), Setting::Text);
   set(tr("Fast Period"), "5", Setting::Integer);
+  set(tr("Fast Displace"), "0", Setting::Integer);
   set(tr("Fast Type"), "SMA", Setting::MAType);
   set(tr("Fast Input"), tr("Close"), Setting::InputField);
   set(tr("Slow Color"), "red", Setting::Color);
   set(tr("Slow Line Type"), tr("Line"), Setting::LineType);
   set(tr("Slow Label"), tr("MA2S"), Setting::Text);
   set(tr("Slow Period"), "20", Setting::Integer);
+  set(tr("Slow Displace"), "0", Setting::Integer);
   set(tr("Slow Type"), "SMA", Setting::MAType);
   set(tr("Slow Input"), tr("Close"), Setting::InputField);
   set(tr("Plot"), tr("True"), Setting::None);
@@ -54,15 +56,12 @@ void MA2::calculate ()
   PlotLine *fin = getInput(getData(tr("Fast Input")));
   PlotLine *sin = getInput(getData(tr("Slow Input")));
 
-  int fperiod = getInt(tr("Fast Period"));
-  int speriod = getInt(tr("Slow Period"));
-
-  PlotLine *fma = getMA(fin, getData(tr("Fast Type")), fperiod);
+  PlotLine *fma = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period")), getInt(tr("Fast Displace")));
   fma->setColor(getData(tr("Fast Color")));
   fma->setType(getData(tr("Fast Line Type")));
   fma->setLabel(getData(tr("Fast Label")));
 
-  PlotLine *sma = getMA(sin, getData(tr("Slow Type")), speriod);
+  PlotLine *sma = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period")), getInt(tr("Slow Displace")));
   sma->setColor(getData(tr("Slow Color")));
   sma->setType(getData(tr("Slow Line Type")));
   sma->setLabel(getData(tr("Slow Label")));
