@@ -41,6 +41,12 @@ MMA::MMA ()
   set(tr("Fast Period 4"), "10", Setting::Integer);
   set(tr("Fast Period 5"), "12", Setting::Integer);
   set(tr("Fast Period 6"), "15", Setting::Integer);
+  set(tr("Fast Displace 1"), "0", Setting::Integer);
+  set(tr("Fast Displace 2"), "0", Setting::Integer);
+  set(tr("Fast Displace 3"), "0", Setting::Integer);
+  set(tr("Fast Displace 4"), "0", Setting::Integer);
+  set(tr("Fast Displace 5"), "0", Setting::Integer);
+  set(tr("Fast Displace 6"), "0", Setting::Integer);
   set(tr("Fast Type"), "EMA", Setting::MAType);
   set(tr("Fast Input"), tr("Close"), Setting::InputField);
   set(tr("Slow Color"), "yellow", Setting::Color);
@@ -57,12 +63,19 @@ MMA::MMA ()
   set(tr("Slow Period 4"), "45", Setting::Integer);
   set(tr("Slow Period 5"), "50", Setting::Integer);
   set(tr("Slow Period 6"), "60", Setting::Integer);
+  set(tr("Slow Displace 1"), "0", Setting::Integer);
+  set(tr("Slow Displace 2"), "0", Setting::Integer);
+  set(tr("Slow Displace 3"), "0", Setting::Integer);
+  set(tr("Slow Displace 4"), "0", Setting::Integer);
+  set(tr("Slow Displace 5"), "0", Setting::Integer);
+  set(tr("Slow Displace 6"), "0", Setting::Integer);
   set(tr("Slow Type"), "EMA", Setting::MAType);
   set(tr("Slow Input"), tr("Close"), Setting::InputField);
   set(tr("Long-term Color"), "blue", Setting::Color);
   set(tr("Long-term Line Type"), tr("Line"), Setting::LineType);
   set(tr("Long-term Label"), tr("MMAL"), Setting::Text);
   set(tr("Long-term Period"), "150", Setting::Integer);
+  set(tr("Long-term Displace"), "0", Setting::Integer);
   set(tr("Long-term Type"), "SMA", Setting::MAType);
   set(tr("Long-term Input"), tr("Close"), Setting::InputField);
   set(tr("Plot"), tr("False"), Setting::None);
@@ -81,71 +94,57 @@ void MMA::calculate ()
   PlotLine *sin = getInput(getData(tr("Slow Input")));
   PlotLine *lin = getInput(getData(tr("Long-term Input")));
 
-  int fperiod1 = getInt(tr("Fast Period 1"));
-  int fperiod2 = getInt(tr("Fast Period 2"));
-  int fperiod3 = getInt(tr("Fast Period 3"));
-  int fperiod4 = getInt(tr("Fast Period 4"));
-  int fperiod5 = getInt(tr("Fast Period 5"));
-  int fperiod6 = getInt(tr("Fast Period 6"));
-  int speriod1 = getInt(tr("Slow Period 1"));
-  int speriod2 = getInt(tr("Slow Period 2"));
-  int speriod3 = getInt(tr("Slow Period 3"));
-  int speriod4 = getInt(tr("Slow Period 4"));
-  int speriod5 = getInt(tr("Slow Period 5"));
-  int speriod6 = getInt(tr("Slow Period 6"));
-  int lperiod = getInt(tr("Long-term Period"));
-
-  PlotLine *fma1 = getMA(fin, getData(tr("Fast Type")), fperiod1);
+  PlotLine *fma1 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 1")), getInt(tr("Fast Displace 1")));
   fma1->setColor(getData(tr("Fast Color")));
   fma1->setType(getData(tr("Fast Line Type")));
   fma1->setLabel(getData(tr("Fast Label 1")));
-  PlotLine *fma2 = getMA(fin, getData(tr("Fast Type")), fperiod2);
+  PlotLine *fma2 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 2")), getInt(tr("Fast Displace 2")));
   fma2->setColor(getData(tr("Fast Color")));
   fma2->setType(getData(tr("Fast Line Type")));
   fma2->setLabel(getData(tr("Fast Label 2")));
-  PlotLine *fma3 = getMA(fin, getData(tr("Fast Type")), fperiod3);
+  PlotLine *fma3 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 3")), getInt(tr("Fast Displace 3")));
   fma3->setColor(getData(tr("Fast Color")));
   fma3->setType(getData(tr("Fast Line Type")));
   fma3->setLabel(getData(tr("Fast Label 3")));
-  PlotLine *fma4 = getMA(fin, getData(tr("Fast Type")), fperiod4);
+  PlotLine *fma4 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 4")), getInt(tr("Fast Displace 4")));
   fma4->setColor(getData(tr("Fast Color")));
   fma4->setType(getData(tr("Fast Line Type")));
   fma4->setLabel(getData(tr("Fast Label 4")));
-  PlotLine *fma5 = getMA(fin, getData(tr("Fast Type")), fperiod5);
+  PlotLine *fma5 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 5")), getInt(tr("Fast Displace 5")));
   fma5->setColor(getData(tr("Fast Color")));
   fma5->setType(getData(tr("Fast Line Type")));
   fma5->setLabel(getData(tr("Fast Label 5")));
-  PlotLine *fma6 = getMA(fin, getData(tr("Fast Type")), fperiod6);
+  PlotLine *fma6 = getMA(fin, getData(tr("Fast Type")), getInt(tr("Fast Period 6")), getInt(tr("Fast Displace 6")));
   fma6->setColor(getData(tr("Fast Color")));
   fma6->setType(getData(tr("Fast Line Type")));
   fma6->setLabel(getData(tr("Fast Label 6")));
 
-  PlotLine *sma1 = getMA(sin, getData(tr("Slow Type")), speriod1);
+  PlotLine *sma1 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 1")), getInt(tr("Slow Displace 1")));
   sma1->setColor(getData(tr("Slow Color")));
   sma1->setType(getData(tr("Slow Line Type")));
   sma1->setLabel(getData(tr("Slow Label 1")));
-  PlotLine *sma2 = getMA(sin, getData(tr("Slow Type")), speriod2);
+  PlotLine *sma2 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 2")), getInt(tr("Slow Displace 2")));
   sma2->setColor(getData(tr("Slow Color")));
   sma2->setType(getData(tr("Slow Line Type")));
   sma2->setLabel(getData(tr("Slow Label 2")));
-  PlotLine *sma3 = getMA(sin, getData(tr("Slow Type")), speriod3);
+  PlotLine *sma3 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 3")), getInt(tr("Slow Displace 3")));
   sma3->setColor(getData(tr("Slow Color")));
   sma3->setType(getData(tr("Slow Line Type")));
   sma3->setLabel(getData(tr("Slow Label 3")));
-  PlotLine *sma4 = getMA(sin, getData(tr("Slow Type")), speriod4);
+  PlotLine *sma4 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 4")), getInt(tr("Slow Displace 4")));
   sma4->setColor(getData(tr("Slow Color")));
   sma4->setType(getData(tr("Slow Line Type")));
   sma4->setLabel(getData(tr("Slow Label 4")));
-  PlotLine *sma5 = getMA(sin, getData(tr("Slow Type")), speriod5);
+  PlotLine *sma5 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 5")), getInt(tr("Slow Displace 5")));
   sma5->setColor(getData(tr("Slow Color")));
   sma5->setType(getData(tr("Slow Line Type")));
   sma5->setLabel(getData(tr("Slow Label 5")));
-  PlotLine *sma6 = getMA(sin, getData(tr("Slow Type")), speriod6);
+  PlotLine *sma6 = getMA(sin, getData(tr("Slow Type")), getInt(tr("Slow Period 6")), getInt(tr("Slow Displace 6")));
   sma6->setColor(getData(tr("Slow Color")));
   sma6->setType(getData(tr("Slow Line Type")));
   sma6->setLabel(getData(tr("Slow Label 6")));
 
-  PlotLine *lma = getMA(lin, getData(tr("Long-term Type")), lperiod);
+  PlotLine *lma = getMA(lin, getData(tr("Long-term Type")), getInt(tr("Long-term Period")), getInt(tr("Long-term Displace")));
   lma->setColor(getData(tr("Long-term Color")));
   lma->setType(getData(tr("Long-term Line Type")));
   lma->setLabel(getData(tr("Long-term Label")));
